@@ -1,0 +1,15 @@
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <cstddef>
+#include "psddl_psana/timepix.ddl.h"
+namespace Psana {
+namespace Timepix {
+
+ConfigV1::~ConfigV1() {}
+
+
+DataV1::~DataV1() {}
+
+} // namespace Timepix
+} // namespace Psana
