@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-01
+2012-01-11 Andy Salnikov
+- regenerate whole thing from psddldata V00-01-01 with psddl V00-01-02
+- new package timepix
+
 Tag: V00-01-00
 2011-12-09 Andy Salnikov
 - switching to ndarray
